Fixed layout issue

--- a/docs/src/assets/style.css
+++ b/docs/src/assets/style.css
@@ -1,4 +1,4 @@
 img {
-  max-width: 80%!important;
+  max-width: 40em!important;
   max-height: 26em;
 }
